crates/nash-report/src/type_/snapshots/nash_report__type___tests__mismatch_case_branches.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue flag =\n    case flag of\n        True -> 1\n        False -> \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:5:18]
 4 │         True -> 1
 5 │         False -> "hello"
   ·                  ───┬───
   ·                     ╰── case branch 2
   ╰────
