crates/nash-report/src/type_/snapshots/nash_report__type___tests__mismatch_if_branches.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue flag = if flag then 1 else \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:2:34]
 1 │ module Main exposing (..)
 2 │ value flag = if flag then 1 else "hello"
   ·                                  ───┬───
   ·                                     ╰── if branch 2
   ╰────
