crates/nash-report/src/type_/snapshots/nash_report__type___tests__mismatch_if_condition_not_bool.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = if \"hello\" then 1 else 2\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.bool`, found `Primitive.string`.
   ╭─[Main.nash:2:12]
 1 │ module Main exposing (..)
 2 │ value = if "hello" then 1 else 2
   ·            ───┬───
   ·               ╰── if condition
   ╰────
  help: Use an explicit comparison to produce a `bool`.
