crates/nash-report/src/type_/snapshots/nash_report__type___tests__missing_constraint.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : 'a -> Primitive.bool\nf x = x == x\n"
---
nash::type::missing_constraint

  × `==` requires undeclared constraint `Eq 'a`.
   ╭─[Main.nash:3:7]
 2 │ f : 'a -> Primitive.bool
 3 │ f x = x == x
   · ┬     ───┬──
   · │        ╰── constraint required here
   · ╰── annotation for `f`
   ╰────
  help: Add `Eq 'a` to the annotation for `f`.
