crates/nash-report/src/type_/snapshots/nash_report__type___tests__missing_field_alias.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\ntype alias Person = { age : Primitive.int }\nvalue : Person -> Primitive.int\nvalue person = person.aeg\n"
---
nash::type::missing_field

  × Record has no field `aeg`.
   ╭─[Main.nash:4:23]
 3 │ value : Person -> Primitive.int
 4 │ value person = person.aeg
   ·                       ─┬─
   ·                        ╰── field `aeg` of `person`
   ╰────
  help: Did you mean `age`?

        Available fields: { age : Primitive.int
        }
