crates/nash-report/src/type_/snapshots/nash_report__type___tests__missing_impl.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\ntype step = Done | Next Primitive.int\nf = Done == Done\n"
---
nash::type::missing_impl

  × No impl for `Eq step`.
   ╭─[Main.nash:3:5]
 2 │ type step = Done | Next Primitive.int
 3 │ f = Done == Done
   ·     ──────┬─────
   ·           ╰── required by `==`
   ╰────
  help: Available impl heads:

            Primitive.int

        Import or define an impl for `Eq step`.
