crates/nash-report/src/type_/snapshots/nash_report__type___tests__missing_impl_local_union_deriving_not_yet_available.snap
---
source: crates/nash-report/src/type_/tests.rs
expression: text
---
The (==) operator needs its arguments to implement `Eq.Eq`, and here they are:

    step

But there is no `impl Eq.Eq step` in this module or in any import.

Hint: This local datatype is a candidate for `@derive(Eq.Eq)`, but automatic
deriving is not available yet. Write the impl by hand:

    impl Eq.Eq step where
        eq a b = ...
