crates/nash-report/src/type_/snapshots/nash_report__type___tests__missing_storable_constraint_for_list_element.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalues = [\\x -> x + 1]\n"
---
nash::type::missing_impl

  × Unsatisfied representation constraint `Primitive.Storable (Primitive.int
  │                                                            -> Primitive.int)`.
   ╭─[Main.nash:2:10]
 1 │ module Main exposing (..)
 2 │ values = [\x -> x + 1]
   ·          ──────┬──────
   ·                ╰── required by `values`
   ╰────
  help: Requirement chain:

            forming Primitive.list (Primitive.int -> Primitive.int)

        Use a type with Big or Const representation; an impl cannot change representation.
